test/asm/ref-override-bad.err
ERROR: ref-override-bad.asm(8):
    'X' already referenced at ref-override-bad.asm(7)
ERROR: ref-override-bad.asm(13):
    'Y' already referenced at ref-override-bad.asm(10)
error: Assembly aborted (2 errors)!
